make the sky taller, fix the overlap

--- a/menu.css
+++ b/menu.css
@@ -72,7 +72,7 @@ height:100%;
     width: 70%;
     position: relative;
     left: 20%;
-    padding-bottom: 250px;
+    padding-bottom: 75vh;
 }
 
 .bars {
@@ -92,7 +92,7 @@ height:100%;
 
 .middle {
     position: relative;
-    height: 450vh;
+    height: 650vh;
     width: 1024px;
 }
 
